--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
+    "encoding": "^0.1.13",
     "express": "^4.17.1",
     "netlify-lambda": "^2.0.1",
     "node-fetch": "^2.6.1",
